--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "babel": "^6.23.0",
+    "firebase": "^9.9.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
